Changes from 1.16 to 1.0-1 [11-Apr-2017]

- need to divide lambda by n for consistency (the optimal bandwidth for discrete covariates is proportional to 1/n)... the constant 1e-02 is then 1e-02/n so for n=100 1e-04, 1000 -05 etc. Simulations and real data hold-out experiments suggest this is a good middle ground value.

- changed version number, script for inserting correct date and version number, changes to plot for respecting xlim

Changes from Version 1.15 to 1.16 [9-Apr-2017]

- scaling y prior to computing model average weights to have unit variance and zero mean
- added degree 0 possibility

Changes from Version 1.14 to 1.15 [8-Apr-2017]

- dumped derivative-based test as anova-based approach is working splendidly

Changes from Version 1.13 to 1.14 [6-Apr-2017]

- added option to restrict the sum of ma.weights to one or not (previous used this restriction, now default it to not restrict)

Changes from Version 1.12 to 1.13 [6-Apr-2017]

- issue with inference resolved, added options compute.sigtest.deriv (derivative based inference) and compute.sigtest.anova (F-based inference)

Changes from Version 1.11 to 1.12 [5-Apr-2017]

- potting added horizontal line for derivatives

Changes from Version 1.10 to 1.11 [4-Apr-2017]

- modifying significance testing, changed defaults

Changes from Version 1.09 to 1.10 [4-Apr-2017]

- extended derivatives to the categorical case, more efficient plotting

Changes from Version 1.08 to 1.09 [3-Apr-2017]

- different bootstrap procedure

Changes from Version 1.07 to 1.08 [2-Apr-2017]

- fixed bootstrap anova for corner cases, various bugs squashed

Changes from Version 1.06 to 1.07 [2-Apr-2017]

- added bootstrap anova, fixed minor glitches

Changes from Version 1.05 to 1.06 [1-Apr-2017]

- no longer relies in routines from crs (I wrote crs and have migrated a subset of necessary functions to this package)

Changes from Version 1.04 to 1.05 [31-Mar-2017]

- various tweaks to plot, modified examples to use plot
