@@ -1,8 +1,8 @@
 Package: ma
 Type: Package
 Title: Model Averaging
-Version: 1.0-1
-Date: 2017-04-13
+Version: 1.0-2
+Date: 2017-04-14
 Imports: quadprog
 Suggests: crs, np, rgl
 Author: Jeffrey S. Racine
