@@ -15,6 +15,7 @@ lm.ma.formula <- function(formula,
                           basis.vec=NULL,
                           basis=c("auto","tensor","taylor","additive"),
                           bootstrap.ci=FALSE,
+                          c.lambda=1e-01,
                           compute.anova=FALSE,
                           compute.anova.index=NULL,
                           compute.deriv=FALSE,
@@ -25,7 +26,6 @@ lm.ma.formula <- function(formula,
                           deriv.order=1,
                           K.mat=NULL,
                           knots=FALSE,
-                          c.lambda=1e-02,
                           ma.weights=NULL,
                           method=c("jma","mma"),
                           rank.vec=NULL,
@@ -96,6 +96,7 @@ lm.ma.default <- function(y=NULL,
                           basis.vec=NULL,
                           basis=c("auto","tensor","taylor","additive"),
                           bootstrap.ci=FALSE,
+                          c.lambda=1e-01,
                           compute.anova=FALSE,
                           compute.anova.index=NULL,
                           compute.deriv=FALSE,
@@ -106,7 +107,6 @@ lm.ma.default <- function(y=NULL,
                           deriv.order=1,
                           K.mat=NULL,
                           knots=FALSE,
-                          c.lambda=1e-02,
                           ma.weights=NULL,
                           method=c("jma","mma"),
                           rank.vec=NULL,
@@ -827,6 +827,7 @@ lm.ma.Est <- function(y=NULL,
                       X.eval=NULL,
                       basis.vec=NULL,
                       basis=c("tensor","taylor","additive","auto"),
+                      c.lambda=1e-01,
                       compute.deriv=FALSE,
                       compute.mean=TRUE,
                       degree.max=NULL,
@@ -835,7 +836,6 @@ lm.ma.Est <- function(y=NULL,
                       deriv.order=1,
                       K.mat=NULL,
                       knots=FALSE,
-                      c.lambda=1e-02,
                       ma.weights=NULL,
                       method=c("jma","mma"),
                       rank.vec=NULL,
@@ -921,7 +921,7 @@ lm.ma.Est <- function(y=NULL,
         include <- NULL
     } else {
         include <- rep(1,num.z)
-        lambda.vec <- rep(c.lambda/num.obs,num.z)
+        lambda.vec <- rep(c.lambda*num.z/num.obs,num.z)
     }
 
     if(is.null(degree.max)) {
