@@ -20,6 +20,7 @@ lm.ma(...)
       basis.vec = NULL,
       basis = c("auto","tensor","taylor","additive"),
       bootstrap.ci = FALSE,
+      c.lambda = 1e-01,
       compute.anova = FALSE,
       compute.anova.index = NULL,
       compute.deriv = FALSE,
@@ -30,7 +31,6 @@ lm.ma(...)
       deriv.order = 1,
       K.mat = NULL,
       knots = FALSE,
-      c.lambda = 1e-02,
       ma.weights = NULL,
       method = c("jma","mma"),
       rank.vec = NULL,
@@ -53,6 +53,7 @@ lm.ma(...)
       basis.vec = NULL,
       basis = c("auto","tensor","taylor","additive"),
       bootstrap.ci = FALSE,
+      c.lambda = 1e-01,
       compute.anova = FALSE,
       compute.anova.index = NULL,
       compute.deriv = FALSE,
@@ -63,7 +64,6 @@ lm.ma(...)
       deriv.order = 1,
       K.mat = NULL,
       knots = FALSE,
-      c.lambda = 1e-02,
       ma.weights = NULL,
       method = c("jma","mma"),
       rank.vec = NULL,
@@ -100,6 +100,10 @@ lm.ma(...)
 
   \item{bootstrap.ci}{a logical value indicating whether or not to bootstrap nonparametric confidence intervals}
 
+  \item{c.lambda}{constant for smoothing parameter lambda for weight
+  function for the categorical predictors when \code{vc=TRUE} (defaults
+  to \code{lambda=c.lambda*p/n} where \code{p} is the number of categorical predictors and \code{n} the number of observations)}
+
   \item{compute.anova}{a logical value indicating whether or not conduct an anova-based bootstrap procedure to test for significance of each predictor}
 
   \item{compute.anova.index}{an option vector of indices indicating as to which predictor(s) the test procedure is to be performed (default is all predictors)}
@@ -108,9 +112,9 @@ lm.ma(...)
 
   \item{compute.mean}{a logical value indicating whether or not to compute the conditional mean}
 
-  \item{degree.max}{maximum value for the basis in each dimension (defaults to \code{max(2,S*log(n)/k} where \code{k} is the number of numeric (i.e., non categorical) predictors and \code{n} the number of observations}
+  \item{degree.max}{maximum value for the basis degree in each dimension (defaults to \code{max(2,S*log(n)/k)} where \code{k} is the number of numeric predictors and \code{n} the number of observations}
 
-  \item{degree.min}{minimum value for the basis in each dimension}
+  \item{degree.min}{minimum value for the basis degree in each dimension}
 
   \item{deriv.index}{optional vector of indices indicating as to which predictor(s) the derivative computation is to be performed}
   
@@ -118,9 +122,7 @@ lm.ma(...)
 
   \item{K.mat}{matrix with degree and knots that could be passed to the basis routines}
 
-  \item{knots}{a logical value indicating whether or not to include interior knots (set equal to the degree)}
-
-  \item{c.lambda}{constant for smoothing parameter lambda for weight function for the categorical predictors when \code{vc=TRUE} (lambda=c.lambda/n)}
+  \item{knots}{a logical value indicating whether or not to include interior knots}
 
   \item{ma.weights}{a vector of model average weights obtained from a previous invocation (useful for bootstrapping etc.)}
 
@@ -132,7 +134,7 @@ lm.ma(...)
   
   \item{S}{the constant in the data-driven rule for determining degree.max}
 
-  \item{segments.max}{when \code{knots=TRUE} the maximum number of segments (i.e., interior knots plus 1) to use for the B-spline basis}
+  \item{segments.max}{when \code{knots=TRUE} the maximum number of segments (i.e., interior knots plus 1) to allow for the B-spline basis}
 
   \item{vc}{a logical value indicating whether to allow the categorical predictors to enter additively (only the intercept can shift) or to instead use a varying coefficient structure (all parameters can shift)}
 
@@ -177,7 +179,7 @@ Models for lm.ma are specified symbolically. A typical model has the form \code{
     model$DS[model$ma.weights>1e-05,]
 }
 
-Note that, unlike \code{lm} in which the formula interface specifies the functional form, in \code{lm.ma} the formula interface is strictly for listing the variables involved, while the bases will determine an appropriate model averaged functional form. Do not incorporate transformations, interactions and the like in the formula interface for \code{lm.ma} as these will most surely fail.
+Note that, unlike \code{lm} in which the formula interface specifies the functional form, in \code{lm.ma} the formula interface is strictly for listing the variables involved and the procedure will determine an appropriate model averaged functional form. Do not incorporate transformations, interactions and the like in the formula interface for \code{lm.ma} as these will most surely fail.
 
 This function computes model averages over least squares candidate models whose predictors are generated by common basis functions (additive, multivariate polynomial, or tensor products). The candidate models increase in complexity from linear bases through higher order ones up to \code{degree.max}. All bases are of the Bernstein polynomial class, as opposed to raw polynomials, and allow for differing degrees across multivariate predictors. When \code{knots=TRUE}, interior knots are used and the Bernstein polynomials become B-spline bases and we are then averaging over regression spline models. When the number of numeric predictors is two or more, the multivariate polynomial includes interaction terms up to order degree minus one. Since we are averaging over models that are nonlinear in the predictors, derivatives will be vectors that potentially depend on the values of every predictor. An ad-hoc formula is used to determine the relationship between the largest (most complex) model, the sample size, and the number of predictors. This ad-hoc rule was set so that, as the sample size increases, we can approximate ever more complex functions while necessarily restricting the size of the largest model in small sample settings. Categorical predictors can enter additively and linearly (\code{vc=FALSE}) or in a parsimonious manner by exploiting recent developments in semiparametric varying coefficient models along the lines of Li, Ouyang, and Racine (2013). With the options \code{knots=TRUE} and \code{vc=TRUE}, we are averaging over varying-coefficient regression splines.
 
